[gd_scene load_steps=2 format=3 uid="uid://basxtuaadorw2"]

[ext_resource type="Script" uid="uid://bw7sovdmt6hbc" path="res://addons/quest_weaver/ui/components/synchronize_input_editor_entry.gd" id="1_akkq7"]

[node name="SynchronizeInputEditorEntry" type="VBoxContainer"]
script = ExtResource("1_akkq7")

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="RemoveButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Port Name: "

[node name="PortNameEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
